# topology-lab

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md  index.html
memory/: JOURNAL.md
src/: app.rs  lib.rs  main.rs
src/components/: betti_curve.rs  hexagram_view.rs  mod.rs  nav.rs  persistence_diagram.rs  phase_space.rs  simplicial_complex.rs  tension_curve.rs
src/math/: iching.rs  mod.rs  music.rs  persistence.rs  sheaf.rs  simplex.rs  symplectic.rs
src/pages/: conjectures.rs  home.rs  iching.rs  mod.rs  music.rs  persistence.rs  social.rs  symplectic.rs
src/styles/: main.css
style/: main.scss
