[package]
name = "topology-lab"
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance Collective"]

[[bin]]
name = "topology-lab"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
console_log = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Element",
    "Document",
    "Window",
    "MouseEvent",
    "DomRect",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.leptos]
output-name = "topology-lab"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"

